Fixed nav vertical spacing & added ScrollSmoother

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -14,16 +14,19 @@ body {
 }
 
 .hero {
-  height: 150vh;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
   &__container {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 70vh;
+    height: 90vh;
     width: 90vw;
-    margin: 0 auto;
-    margin-top: 4rem;
+    // margin: 0 auto;
     background: radial-gradient(50% 28.59% at 50% 100%, #082078 0%, #03060e 100%);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     border-radius: 32px;
